--- a/style.css
+++ b/style.css
@@ -68,3 +68,13 @@ input {
 .displayValue {
   font-size: 28px;
 }
+
+.middel {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+p {
+  font-size: 22px;
+}
