--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .box {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr auto;
+  grid-template-columns: 1fr 1fr 1fr;
   max-width: 1200px;
   margin: 0 auto;
   grid-gap: 12px;
@@ -25,7 +25,7 @@
 
 .box_1 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr auto;
+  grid-template-columns: 1fr 1fr 1fr;
   max-width: 1200px;
   margin: 0 auto;
   grid-gap: 12px;
